src/test/ui/issues/issue-17431-3.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/issue-17431-3.rs:3:1
   |
LL | struct Foo { foo: Mutex<Option<Foo>> }
   | ^^^^^^^^^^        ------------------ recursive without indirection
   | |
   | recursive type has infinite size
   |
help: insert some indirection to make `Foo` representable
   |
LL | struct Foo { foo: Box<Mutex<Option<Foo>>> }
   |                   ^^^^                  ^
LL | struct Foo { foo: Rc<Mutex<Option<Foo>>> }
   |                   ^^^                  ^
LL | struct Foo { foo: &Mutex<Option<Foo>> }
   |                   ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
