src/test/ui/issues/issue-17431-3.rs
use std::sync::Mutex;

struct Foo { foo: Mutex<Option<Foo>> }
//~^ ERROR recursive type `Foo` has infinite size

impl Foo { fn bar(&self) {} }

fn main() {}
